--- a/.github/workflows/project-linter.yml
+++ b/.github/workflows/project-linter.yml
@@ -1,2 +1,14 @@
-- name: Pull Request Linter
-  uses: MorrisonCole/pr-lint-action@v1.7.0
+name: ESLint
+on: [push, pull_request]
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - name: Install dependencies
+        run: npm ci
+      - name: Run ESLint
+        run: npx eslint .
