Ne lance ESLint qu'en cas de fichier JS

--- a/.github/workflows/project-linter.yml
+++ b/.github/workflows/project-linter.yml
@@ -1,5 +1,12 @@
 name: ESLint
-on: [push, pull_request]
+on:
+  push:
+    paths:
+      - '**.js'
+  pull_request:
+    paths:
+      - '**.js'
+
 jobs:
   build:
     runs-on: ubuntu-latest
