--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,14 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "jquery": true
   },
   "extends": "eslint:recommended",
   "parserOptions": {
     "ecmaVersion": 12
   },
   "rules": {
-    "semi": ["error", "always"],
-    "no-var": "error"
+    "semi": ["error", "always"]
   }
 }
