--- a/.github/ISSUE_TEMPLATE/github_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/github_bug_report.yml
@@ -35,3 +35,11 @@ body:
       description: Décrivez ce que vous attendiez à la place du bug.
     validations:
       required: true
+  - type: checkboxes
+    id: agreement
+    attributes:
+      label: Code de conduite
+      description: En soumettant ce rapport, vous vous engagez à respecter notre code de conduite.
+      options:
+        - label: J'accepte de suivre le code de conduite de ce projet.
+          required: true
