--- a/.github/ISSUE_TEMPLATE/website_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/website_bug_report.yml
@@ -56,3 +56,11 @@ body:
       description: Fournissez une liste des étapes pour reproduire le bug.
     validations:
       required: true
+  - type: checkboxes
+    id: agreement
+    attributes:
+      label: Code de conduite
+      description: En soumettant ce rapport, vous vous engagez à respecter notre code de conduite.
+      options:
+        - label: J'accepte de suivre le code de conduite de ce projet.
+          required: true
